tooling/nargo_cli/tests/snapshots/execution_failure/numeric_alias_shadowed_by_caller_param/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed
  ┌─ src/main.nr:8:12
  │
8 │     assert(N == lib::Size);
  │            --------------
  │
  = Call stack:
    1: ?
            at src/main.nr:7:4

Error interpreting main function
